k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p2pspb
  labels:
    name: p2pspb
    environment: production
